# mesh-obj-gles

./: .gitignore  .gitmodules  mesh-obj-gles.cabal  readme
app/: Main.hs
example/wolf/frames-wait/: wolf_000124.mtl
example/wolf/textures/: eyes-1.png.base64  eyes-2.png.base64  fur.png.base64
src/Codec/MeshObjGles/: Parse.hs  ParseMtl.hs  ParseSave.hs  ParseUtil.hs  Types.hs
