name:           mesh-obj-gles
version:        0.1.0.0
description:    Please see the README on Github
homepage:       https://github.com/githubuser/mesh-obj-gles#readme
bug-reports:    https://github.com/githubuser/mesh-obj-gles/issues
author:         Allen Haim
maintainer:     allen@netherrealm.net
copyright:      2018 Allen Haim
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/mesh-obj-gles

library
  exposed-modules:
      Codec.MeshObjGles.Parse
      Codec.MeshObjGles.ParseMtl
      Codec.MeshObjGles.ParseUtil
      Codec.MeshObjGles.Types
  hs-source-dirs:
      src
  ghc-options:
      -funbox-strict-fields
  build-depends:
      base >=4.9.1.0 && <4.12
    , bytestring >= 0.10.8.1 && <0.10.9
    , text >= 1.2.2.2 && <1.2.4
    , containers >= 0.5.7.1 && <0.5.11
    , vector >= 0.11.0.0 && <0.12.1
    , yaml >= 0.8.25 && <0.9
    , parsec >= 3.1.11 && <3.2
    , directory >= 1.3.0.0 && <1.3.2
    , raw-strings-qq >= 1.1 && <2
    , wavefront >= 0.7.1.1 && <0.7.2
    , Glob >= 0.9.1 && <0.10
    , deepseq >= 1.4.2.0 && <1.4.4
  default-language: Haskell2010
